# mwis

./: .gitignore  README.md  pyproject.toml
mwis/: main.py
mwis/app/: home.py
mwis/core/: animal.py  mwis.py
mwis/tests/: example.json  test_mwis.py
