[tool.poetry]
name = "mwis"
version = "0.1.0"
description = ""
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
streamlit = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
